Better view for result screen

--- a/app/templates/input_screen.html
+++ b/app/templates/input_screen.html
@@ -20,4 +20,5 @@
   <label for="lname">S6:</label>
   <input type="text" id="lname" name="s6" value=0><br><br>
   <input type="submit" value="Submit">
+  <div style="bottom: 0px;position: absolute;right: 0px;">Deploy version: {{deploy_version}}</div>
 </form>
